# min-caml-hs

./: README.md  min-caml.cabal  stack.yaml
app/: Main.hs
min-rt/: Makefile  min-caml  min-rt.ml
src/: AllTypes.hs  Alpha.hs  Asm.hs  Assoc.hs  Base.hs  Base.hs-boot  Beta.hs  CamlMonad.hs  Closure.hs  ConstFold.hs  Elim.hs  Emit.hs  Id.hs  Inline.hs  KNormal.hs  Lexer.x  Main.hs  Optimise.hs  Parser.output  Parser.y  Parser.y.old  RegAlloc.hs  Simm.hs  Syntax.hs  Type.hs  Types.hs  Typing.hs  Virtual.hs
src/BackEnd/: float.c
src/BackEnd/X86/: Asm.hs  Emit.hs  RegAlloc.hs  Simm.hs  Virtual.hs
src/FrontEnd/: Lexer.x  Parser.y  Syntax.hs  Syntax.hs-boot  Typing.hs
src/MiddleEnd/: Alpha.hs  Assoc.hs  Beta.hs  Closure.hs  Closure.hs-boot  ConstFold.hs  Elim.hs  Inline.hs  KNormal.hs  Optimise.hs
src/tmp/: Emit.hi  Emit.hs  Main  cmd  float.c  float.h
test/: Spec.hs  ack.s  adder.s  cls-bug.s  cls-bug2-res.s  cls-rec-res.s  cls-reg-bug.s  even-odd-res.s  fib-res.s  float-res.s  float.ml  funcomp.s  gcd-res.s  gcd.ml  inprod-loop.s  inprod-rec.s  inprod-res.s  inprod.ml  join-reg-res.s  join-reg.ml  join-reg2-res.s  join-reg2.s  join-stack.s  join-stack2-res.s  join-stack3.s  matmul-flat.s  matmul.s  non-tail-if-res.s  non-tail-if.s  non-tail-if2-res.s  print-res.s  run  shuffle.s  spill-res.s  spill2.s  spill3-res.s  sum-res.s  sum-tail.s  test.ml
