name:                min-caml
version:             0.1.0.0
build-type:          Simple
extra-source-files:  src/Parser.y
                     src/Lexer.x
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , mtl
                     , lens
                     , array
                     , vector
                     , parsec
                     , containers
                     , transformers
  default-language:    Haskell2010
  build-tools:         happy, alex
  exposed-modules:     Lexer
                     , Parser
                     , Syntax
                     , Type
                     , Typing
                     , KNormal
                     , Alpha
                     , Optimise
                     , Beta
                     , Assoc
                     , Inline
                     , ConstFold
                     , Elim
                        -- ここまでOK
                     , Closure
                     , Virtual
                     , Simm
                     , RegAlloc
                     , Asm
                     , Id
                     , Emit
                     , CamlMonad

executable min-caml-hs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , min-caml
  default-language:    Haskell2010

test-suite hoge-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , min-caml
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

