name:                min-caml
version:             0.1.0.0
build-type:          Simple
extra-source-files:  src/Parser.y
                     src/Lexer.x
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  C-sources:           src/float.c
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , mtl
                     , lens
                     , text
                     , array
                     , vector
                     , containers
                     , transformers
  default-language:    Haskell2010
  build-tools:         happy, alex
  exposed-modules:     Lexer
                     , Parser
                     , AllTypes
                     , Id
                     , Type
                     , Typing
                     , KNormal
                     , Alpha
                     , Optimise
                     , Beta
                     , Assoc
                     , Inline
                     , ConstFold
                     , Elim
                     , Closure
                     , Asm
                     , Virtual
                     , RegAlloc
                     , Simm
                     , Emit
executable min-caml-hs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , options
                     , min-caml
  default-language:    Haskell2010

test-suite min-caml-test
  type:                exitcode-stdio-1.0
  includes:            float.h
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , text
                     , shelly
                     , min-caml
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

