name:                min-caml
version:             0.1.0.0
build-type:          Simple
extra-source-files:  src/FrontEnd/Parser.y
                     src/FrontEnd/Lexer.x
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  C-sources:           src/BackEnd/float.c
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3 -Wall
  build-depends:       base
                     , mtl
                     , lens
                     , text
                     , array
                     , vector
                     , containers
                     , transformers
  default-language:    Haskell2010
  build-tools:         happy, alex
  exposed-modules:     Base
                     , FrontEnd.Syntax
                     , FrontEnd.Lexer
                     , FrontEnd.Parser
                     , FrontEnd.Typing
                     , MiddleEnd.KNormal
                     , MiddleEnd.Alpha
                     , MiddleEnd.Optimise
                     , MiddleEnd.Beta
                     , MiddleEnd.Assoc
                     , MiddleEnd.Inline
                     , MiddleEnd.ConstFold
                     , MiddleEnd.Elim
                     , MiddleEnd.Closure
                     , BackEnd.X86.Asm
                     , BackEnd.X86.Virtual
                     , BackEnd.X86.RegAlloc
                     , BackEnd.X86.Simm
                     , BackEnd.X86.Emit
executable min-caml-hs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , options
                     , min-caml
  default-language:    Haskell2010

test-suite min-caml-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , text
                     , shelly
                     , min-caml
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

